# mathmod-solar-system

./: app.py  model.py  pyproject.toml
static/js/: plot.js
templates/: index.html
