[tool.poetry]
name = "mathmod"
version = "0.1.0"
description = ""
authors = ["arkadi <cotniko-arkadi@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
